--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.datasource.password=root
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.properties.hibernate.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+#Loger
+logging.level.org.springframework=debug
+logging.level.org.hibernate=debug
+
